<?xml version="1.0"?>
<package format="2">
  <name>lexus_launch</name>
  <version>0.1.0</version>
  <description>The lexus_launch package</description>

  <maintainer email="yukihiro.saito@tier4.jp">Yukihiro Saito</maintainer>
  <license>Apache2</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>autoware_accel_brake_map_calibrator</exec_depend>
  <exec_depend>autoware_raw_vehicle_cmd_converter</exec_depend>
  <exec_depend>individual_params</exec_depend>
  <exec_depend>pacmod3</exec_depend>
  <exec_depend>pacmod_interface</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
